# prototype

./: .eslintrc.js  .gitignore  binding.gyp  lerna.json  package.json
database/: synset_dictionary.txt
database/num_id/: 0.txt  1.txt  10.txt  100.txt  1000.txt  10001.txt  10002.txt  10003.txt  10004.txt  10005.txt  10006.txt  10007.txt  10008.txt  1001.txt  10010.txt  10011.txt  10012.txt  10013.txt  10014.txt  10016.txt  10018.txt  10019.txt  1002.txt  10020.txt  10021.txt  10022.txt  10023.txt  10025.txt  10026.txt  10027.txt  10028.txt  10029.txt  1003.txt  10030.txt  10031.txt  10032.txt  10033.txt  10034.txt  10035.txt  10036.txt  (+16459 more)
database/num_id copy/: 0.txt  1.txt  10.txt  100.txt  1000.txt  10000.txt  10001.txt  10002.txt  10003.txt  10004.txt  10005.txt  10006.txt  10007.txt  10008.txt  1001.txt  10010.txt  10011.txt  10012.txt  10013.txt  10014.txt  10015.txt  10016.txt  10018.txt  10019.txt  1002.txt  10020.txt  10021.txt  10023.txt  10024.txt  10025.txt  10026.txt  10027.txt  10028.txt  10029.txt  1003.txt  10030.txt  10031.txt  10032.txt  10033.txt  10034.txt  (+16454 more)
modules/Samples/: main.cpp
modules/VBS/: CMakeLists.txt   RED.txt  a.out  example.txt  readfile.cpp  readfile.h
modules/input-parser/: CMakeLists.txt  preprocessor  requirements.txt
modules/input-parser/src/: CMakeProject2.cpp  _main.cpp  app.py  utils.py
modules/myproject/: CMakeLists.txt
modules/myproject/src/: search_db.cpp
modules/myproject/test/: CMakeLists.txt  loadtbb.cpp
modules/preprocessor/: 00001.txt  CSV_reader.cpp  database.py  histogram.py  install.sh  libtext_bayes.cpp  libtext_bayes.h  main.cpp  main.py  readFile.py  read_csv_queries_2020.cpp  string_split.cpp  tasks.csv  tasks_CSV.cpp  tasks_strings.txt  word2vec.cpp
modules/webapp/.build/: makeHtml.bundle.js.map
scripts/: env.js  launcher.js  paths.js
(+7 files in other folders)
